<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activities.customer_page.AddCustomerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_header_general_info"
            style="@style/text_view_properties"
            android:layout_width="match_parent"
            android:background="@color/light_gray"
            android:drawablePadding="@dimen/base_margin"
            android:padding="@dimen/padding_header"
            android:text="@string/title_general_info"
            app:drawableStartCompat="@drawable/ic_general_info" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_header_general_info"
            android:focusableInTouchMode="true"
            app:startIconDrawable="@drawable/ic_name"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_first_name"
                android:textSize="@dimen/text_size"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_layout_first_name"
            android:focusableInTouchMode="true"
            app:startIconDrawable="@drawable/ic_name"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_last_name"
                android:textSize="@dimen/text_size" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_layout_last_name"
            android:focusableInTouchMode="true"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_email"
                android:textSize="@dimen/text_size" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_header_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_layout_email"
            android:background="@color/light_gray"
            android:drawablePadding="@dimen/base_margin"
            android:padding="@dimen/padding_header"
            android:text="@string/title_gender"
            android:textColor="@color/color_text_black"
            android:textSize="@dimen/text_size"
            app:drawableStartCompat="@drawable/ic_human_male_female" />

        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_header_gender"
            android:layout_centerInParent="true"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_human_male"
                android:drawableLeft="@drawable/ic_human_male"
                android:gravity="center"
                android:text="@string/radio_txt_male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_human_female"
                android:drawableLeft="@drawable/ic_human_female"
                android:gravity="center"
                android:text="@string/radio_txt_female" />

            <RadioButton
                android:id="@+id/rb_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/radio_txt_none" />
        </RadioGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radio_group_gender"
            android:background="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvAddPhoneNo"
                style="@style/text_view_properties"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/hint_phone_number"
                app:drawableStartCompat="@drawable/ic_general_info"
                app:layout_constraintEnd_toStartOf="@+id/button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAddAddress"
                style="@style/text_view_properties"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:drawablePadding="@dimen/base_margin"
                android:text="@string/hint_address"
                app:drawableStartCompat="@drawable/ic_address"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAddPhoneNo" />

            <TextView
                android:id="@+id/tvAddTags"
                style="@style/text_view_properties"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:drawablePadding="@dimen/base_margin"
                android:text="@string/hint_tags"
                app:drawableStartCompat="@drawable/ic_tags"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAddAddress" />

            <TextView
                android:id="@+id/tvComments"
                style="@style/text_view_properties"

                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="24dp"
                android:drawablePadding="@dimen/base_margin"
                android:text="@string/hint_comments"
                app:drawableStartCompat="@drawable/ic_comment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAddTags" />

            <Button
                android:id="@+id/button"
                style="@style/button_properties"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txt_btn_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button2"
                style="@style/button_properties"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txt_btn_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <Button
                android:id="@+id/button3"
                style="@style/button_properties"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/txt_btn_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>