<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/base_margin"
    android:layout_marginTop="@dimen/base_margin"
    android:layout_marginRight="@dimen/base_margin"
    android:layout_marginBottom="@dimen/base_margin"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_gender_male" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:text="@string/hint_full_name"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgGender"
            />

        <TextView
            android:id="@+id/tvPhoneNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:text="@string/hint_phone_number"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFullName"
            app:drawableStartCompat="@drawable/ic_phone_number"
            android:drawablePadding="@dimen/base_margin"/>

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:text="@string/hint_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhoneNo"
            app:drawableStartCompat="@drawable/ic_wallet"
            android:drawablePadding="@dimen/base_margin"/>

        <TextView
            android:id="@+id/tvTags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin"
            android:text="@string/hint_tags"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBalance"
            app:drawableStartCompat="@drawable/ic_tags"
            android:drawablePadding="@dimen/base_margin"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>